# polyplace-watcher

./: .dockerignore  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  fly-deploy-notes.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
frontend/: index.html
frontend/assets/: index-BWRZO5Ji.css  index-DfbYh6IT.js
scripts/: deploy_local.py  empty_grid_size.py  paint_random.py  partial_grid_size.py  worst_case_size.py
src/polyplace_watcher/: __init__.py  app.py  config.py  events.py  forge_deploy.py  grid.py  grid_store.py  observability.py  snapshot.py  watcher.py
src/polyplace_watcher/devcli/: __init__.py  cli.py  contracts.py  helpers.py
tests/: conftest.py  test_app.py  test_contracts.py  test_e2e.py  test_events.py  test_grid.py  test_grid_store.py  test_observability.py  test_watcher.py
tools/: __init__.py  forge_deploy.py
