[project]
name = "polyplace-watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "josh-gree", email = "joshuadouglasgreenhalgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.0.0",
    "fastapi>=0.135.3",
    "polyplace-contracts",
    "pydantic>=2.12.5",
    "python-json-logger>=4.1.0",
    "uvicorn>=0.44.0",
    "websockets>=12.0",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
polyplace-contracts = { git = "https://github.com/josh-gree/polyplace-contracts.git", subdirectory = "packages/python" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "web3>=7.15.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
